# nifty

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  NIFTYConfig.cmake.in  README.md  appveyor.yml  appveyor_old.yml  blocking_lmc.py  build_conda.sh  dagglo.py  dagglo3.py  dd_fun.py  environment.yaml  hfun.py  hfun_real.py  new_plcm.py  plmc.py  test_two_pass.py  two_pass_agglomeration.py
docsrc/: CMakeLists.txt  material.rst
docsrc/cpp/: CMakeLists.txt  Doxyfile.in  Doxyfile_xml.in
docsrc/cpp/include/: mainpage.dox
docsrc/python/: CMakeLists.txt  conf.py.in  conf.py.inold  examples.rst  index.rst  nifty.rst  reference.rst  refs.bib
docsrc/python/_templates/: template_module.rst
docsrc/python/sections/: cpp_reference.rst  documentation.rst  faq.rst  installation.rst  reference.rst
docsrc/python/sections/nifty/: nifty.rst
docsrc/python/sections/theory/: lifted_multicut.rst  mincut.rst  multicut.rst  theory.rst
external_libs/: CMakeLists.txt  README.md
external_libs/ad3/: CMakeLists.txt
external_libs/ad3/files/: CMakeLists.txt
external_libs/blossomv/: CMakeLists.txt
external_libs/blossomv/files/: CMakeLists.txt
external_libs/conicbundle/: CMakeLists.txt
external_libs/conicbundle/files/: CMakeLists.txt
external_libs/daoopt/: CMakeLists.txt
external_libs/daoopt/files/: CMakeLists.txt
external_libs/fastpd/: CMakeLists.txt
external_libs/fastpd/files/: CMakeLists.txt  FastPD.patch
external_libs/gco/: CMakeLists.txt
external_libs/gco/files/: CMakeLists.txt  gco.patch
external_libs/ibfs/: CMakeLists.txt
external_libs/ibfs/files/: CMakeLists.txt  ibfs.patch
external_libs/libdai/: CMakeLists.txt
external_libs/libdai/files/: CMakeLists.txt
external_libs/maxflow/: CMakeLists.txt
external_libs/maxflow/files/: CMakeLists.txt
external_libs/mplp/: CMakeLists.txt
external_libs/mplp/files/: CMakeLists.txt
external_libs/mrf/: CMakeLists.txt
external_libs/mrf/files/: CMakeLists.txt  MRF2.1.patch
external_libs/planarity/: CMakeLists.txt
external_libs/planarity/files/: CMakeLists.txt
external_libs/qpbo/: CMakeLists.txt
external_libs/qpbo/files/: CMakeLists.txt
external_libs/trws/: CMakeLists.txt
external_libs/trws/files/: CMakeLists.txt
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  marray.cxx  vs_varray.cxx
src/examples/: CMakeLists.txt  examples_common.hxx
src/examples/graph/: CMakeLists.txt  undirected_list_graph.cxx
src/examples/graph/multicut/: CMakeLists.txt  multicut.cxx
src/external_libs/: CMakeLists.txt
src/external_libs/lp_mp/: CMakeLists.txt
src/external_libs/lp_mp/SVM-NEW/: CMakeLists.txt
src/external_libs/qpbo/: CMakeLists.txt
src/python/: CMakeLists.txt
src/python/benchmark/: hdf5_benchmark.py
src/python/examples/: learnable_lifted_mc.py  nifty_configuration.py
src/python/examples/cgp/: README.txt  plot_cgp_features.py  plot_cgp_introduction.py
src/python/examples/graph/: README.txt  edge_contraction_graph.py  plot_agglomerative_clustering.py  plot_agglomerative_clustering_size_regularizer.py  plot_cgp_cell_labels_2d.py  plot_cgp_introduction.py  plot_edge_contraction_graph.py  plot_grid_graph.py  plot_grid_graph_agglomerative_clustering.py  plot_toy_multicut.py  plot_undirected_graph_simple_example.py  plot_undirected_grid_graph.py  plot_undirected_grid_graph_watershed.py  plot_undirected_grid_graph_watersheds.py
src/python/examples/misc/: README.txt  plot_ufd.py
src/python/examples/multicut/: README.txt  plot_isbi_2012_multicut_2D_simple.py
src/python/lib/: CMakeLists.txt  converter.hxx  nifty.cxx
src/python/lib/carving/: CMakeLists.txt  carving.cxx
src/python/lib/cgp/: CMakeLists.txt  bounds.cxx  cgp.cxx  cnn_representation.cxx  export_cell_vector.hxx  features.cxx  geometry.cxx  topological_grid.cxx
src/python/lib/container/: CMakeLists.txt  container.cxx
src/python/lib/deep_learning/: CMakeLists.txt  deep_learning.cxx  export_malis.cxx  export_stuff.cxx  ufd.cxx
src/python/lib/distributed/: CMakeLists.txt  distributed.cxx  distributed_graph.cxx  distributed_utils.cxx  edge_morphology.cxx  eval_utils.cxx  graph_extraction.cxx  lifted_utils.cxx  mergeable_features.cxx  morphology.cxx  region_graph.cxx
src/python/lib/filters/: CMakeLists.txt  affinities.cxx  filters.cxx  gaussian_curvature.cxx  nonmaximum_suppression.cxx
src/python/lib/graph/: CMakeLists.txt  accumulate_long_range_affinities.cxx  carving.cxx  compute_rag.cxx  connected_components.cxx  edge_contraction_graph_undirected_graph.cxx  edge_weighted_watersheds.cxx  export_edge_contraction_graph.hxx  export_shortest_path_dijkstra.cxx  export_undirected_graph_class_api.hxx  graph.cxx  grid_region_adjacency_graph.cxx  label_propagation.cxx  node_weighted_watersheds.cxx  undirected_graph.cxx  undirected_grid_graph.cxx  undirected_list_graph.cxx  undirected_long_range_grid_graph.cxx
src/python/lib/hdf5/: hdf5.cxx  (+5 more)
src/python/module/: __init__.py
src/python/test/: CMakeLists.txt  bleedtest.py  newspeedtest.py  perturb_and_map.py  rag3d.py  speedtest.py  speedtest2.py  test_agglo.py  test_blocking.py  test_hdf5.py  test_mc.py  test_mcgala.py  test_mcgala_.py  test_multicut_inference.py  test_python.py  test_rag.py  test_rag_accumulate.py  test_rag_sliced.py
src/test/: CMakeLists.txt  CMakeLists.txt~  test_blocking.cxx  test_marray.cxx
src/test/test_array/: CMakeLists.txt  test_array.cxx
src/test/test_compute/: CMakeLists.txt  test_compute.cxx
src/test/test_features/: CMakeLists.txt  test_fastfilters_wrapper.cxx
src/test/test_graph/: CMakeLists.txt  test_breadth_first_search.cxx  test_depth_first_search.cxx  test_edge_weighted_watersheds.cxx  test_multicut.cxx  test_rag.cxx  test_shortest_path.cxx  test_shortest_path_bellman_ford.cxx  test_shortest_path_dijkstra.cxx  test_undirected_graph.cxx  test_undirected_grid_graph.cxx
src/test/test_histogram/: CMakeLists.txt  test_histogram.cxx
src/test/test_marray/: CMakeLists.txt  CMakeLists.txt~  test_marray.cxx  test_marray_hdf5.cxx
src/test/test_pipelines/: CMakeLists.txt  testPC.ilp  test_ilastik_pixel_classification.cxx  testraw.h5
(+10230 files in other folders)
