#-------------------------------------------------------------------------------------------------------------------
# Documentation
#-------------------------------------------------------------------------------------------------------------------
add_custom_target(doc )

add_subdirectory(cpp)
add_subdirectory(python)



